# hexlet-flask-example

./: .gitignore  Makefile  README.md  build.sh  db_repository.py  example.py  pyproject.toml  session_repository.py  user_repository.py  users.json
hexlet_flask_example/: __init__.py  example.py  user_repository.py
templates/users/: edit.html  index.html  new.html  show.html
